# django-idp-user

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yaml  workflow.yml
docs/: index.md
docs/pages/: authorization.md
idp_user/: __init__.py  agents.py  apps.py  checks.py  policy.rego  producer.py  schema_extensions.py  settings.py  signals.py  typing.py
idp_user/auth/: __init__.py  admin.py  admin_authentication.py  async_authentication.py  authentication.py  drf.py  drf_authentication.py  ninja.py  ninja_authentication.py  opa_permission.py
idp_user/management/commands/: put_app_entities_records_to_kafka.py
idp_user/middlewares/: __init__.py  opa.py
idp_user/migrations/: 0001_initial.py  0001_initial_squashed_0005_alter_userrole_id.py  0002_auto_20211024_1908.py  0002_auto_20220120_1427.py  0002_auto_20220120_1617.py  0003_auto_20220513_1025.py  0004_auto_20220817_1526.py  0005_alter_userrole_id.py  0006_userrole_organization_and_more.py  0007_user_demo.py
idp_user/models/: __init__.py  user.py  user_role.py
idp_user/services/: __init__.py  async_user.py  base_user.py  opa.py  policy.rego  user.py
idp_user/utils/: __init__.py  choices.py  exceptions.py  functions.py  typing.py
scripts/: format.sh  lint.sh  test.sh  update_version.py
tests/: conftest.py  test_app_entity.py  test_apps.py  test_roles.py  test_settings.py
tests/test_auth/: test_authentication.py
